v1.2.1 - correção de bugs e adicionado menu de substituição para arquivos restaurados